# binja-codemode-mcp

./: .gitignore  CHANGELOG.md  LICENSE  README.md  __init__.py  config.py  plugin.json  pyproject.toml  stubs.py
.claude/commands/: coordinate-re.md
.claude/skills/: README.md  coordinate-re.json
.claude/skills/prompts/: analyzer-agent.md  coordinator-agent.md  triage-agent.md
bridge/: mcp_bridge.py
headless/: __init__.py  app.py  server.py  session.py
plugin/: __init__.py  api.py  executor.py  server.py  sessions.py  state.py  widget.py  workspace.py
