[project]
name = "binja-codemode-mcp"
version = "0.2.0"
description = "MCP server for LLM-assisted reverse engineering via code execution"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Austyn Krutsinger" }]

# Note: binaryninja is not on PyPI - it's provided by Binary Ninja's Python environment
dependencies = []

[project.optional-dependencies]
headless = [
    "textual>=0.89.0",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[project.scripts]
binja-codemode-server = "headless.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["plugin", "bridge", "headless"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
